Bug 503042 - Implement a way to detect a touch enabled device. r=vlad, sr=dbaron