widget/src/windows/nsLookAndFeel.h
@@ -41,6 +41,20 @@
 
 #include "nsCOMPtr.h"
 
+/*
+ * Gesture System Metrics
+ */
+#ifndef SM_DIGITIZER
+#define SM_DIGITIZER         94
+#define TABLET_CONFIG_NONE   0x00000000
+#define NID_INTEGRATED_TOUCH 0x00000001
+#define NID_EXTERNAL_TOUCH   0x00000002
+#define NID_INTEGRATED_PEN   0x00000004
+#define NID_EXTERNAL_PEN     0x00000008
+#define NID_MULTI_INPUT      0x00000040
+#define NID_READY            0x00000080
+#endif
+
 class nsLookAndFeel: public nsXPLookAndFeel {
 public:
   nsLookAndFeel();
